--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native": "0.76.7",
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-htmlview": "^0.17.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vision-camera": "^4.6.4",
