--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "start": "expo start --tunnel",
     "start-web": "expo start --web --tunnel",
-    "start-web-dev": "DEBUG=expo* expo start --web --tunnel"
+    "start-web-dev": "DEBUG=expo* expo start --web --tunnel",
+    "reinstall-plugins": "expo install react-native-linear-gradient react-native-reanimated react-native-animatable",
+    "clear-cache": "npx expo start --clear",
+    "rebuild": "npm run reinstall-plugins && npm run clear-cache"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
@@ -27,7 +30,7 @@
     "expo-image": "~2.0.6",
     "expo-image-manipulator": "^13.0.6",
     "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "^14.0.1",
+    "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.7",
     "expo-router": "~4.0.17",
@@ -42,9 +45,12 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-animatable": "^1.4.0",
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-htmlview": "^0.17.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vision-camera": "^4.6.4",
