--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^7.0.0",
     "@supabase/supabase-js": "^2.49.3",
     "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
     "expo": "~52.0.36",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.1",
@@ -42,6 +43,7 @@
     "firebase": "^11.5.0",
     "lucide-react-native": "^0.475.0",
     "nativewind": "^4.1.23",
+    "openai": "^4.90.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
