--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-htmlview": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-reanimated": "^3.17.1",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vision-camera": "^4.6.4",
@@ -62,7 +62,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@expo/ngrok": "^4.1.0",
+    "@expo/ngrok": "^4.1.3",
     "@types/react": "~18.3.12",
     "typescript": "~5.3.3"
   },
