--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-firebase/auth": "^21.12.3",
     "@react-native-firebase/firestore": "^21.12.3",
     "@react-native-google-signin/google-signin": "^13.2.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^7.0.0",
     "@supabase/supabase-js": "^2.49.3",
     "axios": "^1.8.4",
