--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "@babel/core": "^7.25.2",
     "@expo/ngrok": "^4.1.3",
     "@types/react": "~18.3.12",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "dotenv": "^16.4.5"
   },
   "private": true,
   "config": {
