--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo": "~52.0.36",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.1",
+    "expo-camera": "^16.0.18",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.0",
@@ -65,8 +66,8 @@
     "@babel/core": "^7.25.2",
     "@expo/ngrok": "^4.1.3",
     "@types/react": "~18.3.12",
-    "typescript": "~5.3.3",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "typescript": "~5.3.3"
   },
   "private": true,
   "config": {
